[package]
name = "replace_me"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/replace_me"
documentation = "https://docs.rs/replace_me"
description = ""
keywords = []
categories = []

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.28"

[dev-dependencies]
anyhow = "1.0.28"
doc-comment = "0.3.3"
lyon = "0.15.6"
miniquad = "0.2.55"
vek = "0.10.2"
